fix for overlapping panels

--- a/public/less/chat/ChatDock.less
+++ b/public/less/chat/ChatDock.less
@@ -2,4 +2,7 @@
 	position: fixed;
 	bottom: 0px;
 	width: 100%;
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-end;
 }
