--- a/public/less/chat/ChatPanel.less
+++ b/public/less/chat/ChatPanel.less
@@ -1,6 +1,7 @@
 .chat-panel {
-	position: absolute;
+	//position: absolute;
 	bottom: 0px;
+	margin-right: 10px;
 
 	.chat-panel-header {
 		background-color: #ddd;
